# Tranfastic

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  TODO.md  app.py  build.spec  build_portable.bat  gui.py  gui_new.py  main.py  make.ps1  pyproject.toml  readme.md  requirements.txt  shortcut.py  tray.py  version_info.py
assets/Material_Symbols_Rounded/: README.txt
docs/: LEGAL.md  ROADMAP.md  TROUBLESHOOTING.md  readme_tr.md
docs/web/: index.html  package.json
docs/web/src/: App.svelte  app.css
docs/web/src/lib/: Download.svelte  Features.svelte  Footer.svelte  Hero.svelte  HowItWorks.svelte
docs/website/: index.html  script.js  style.css
installer/: README.md  build_installer.ps1  tranfastic_installer.nsi
src/: __init__.py  app.py  clipboard_manager.py  config.py  logger.py  startup_manager.py  translator.py  tray_manager.py  version.py
src/core/: __init__.py  clipboard_manager.py  hotkey_manager.py  tray_manager.py  updater.py
src/ui/: __init__.py  settings_window.py  translation_window.py
src/ui/settings_tabs/: __init__.py  about_tab.py  appearance_tab.py  general_tab.py
src/utils/: __init__.py  config.py  dpi_scaling.py  runtime.py
