[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tranfastic"
version = "1.1.0"
description = "Instant POP-UP Translator Application with System Tray and Global Hotkeys"
authors = [
    {name = "Yusuf Emre Albayrak", email = "ysfemrealbyrk@gmail.com"}
]
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["translator", "translation", "system-tray", "hotkeys", "clipboard","popup","utilities","desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt5>=5.15.0",
    "requests>=2.25.0",
    "pyperclip>=1.8.0",
    "keyboard>=0.13.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
build = [
    "pyinstaller>=5.0.0",
    "auto-py-to-exe>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ysfemrealbyrk/tranfastic"
Repository = "https://github.com/ysfemrealbyrk/tranfastic"
Documentation = "https://github.com/ysfemrealbyrk/tranfastic#readme"
Issues = "https://github.com/ysfemrealbyrk/tranfastic/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.ico", "*.png", "*.ttf"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--qt-api=pyqt5",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "PyQt5.*",
    "keyboard.*",
    "pyperclip.*",
]
ignore_missing_imports = true
